Optimized fetch methods